# nurse-exam-app

./: .gitignore  CLAUDE.md  LICENSE  README.md  convert_questions.py  docker-compose.yml
apps/api/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml
apps/api/db/: __init__.py  connection.py  schema.py
apps/api/tests/: conftest.py  test_main.py
apps/web/: .dockerignore  Dockerfile
apps/web/app/: page.tsx
apps/web/public/data/: questions.additional.json  questions.sample.json
docs/: plan.md  spec.md  tasks.md
