[project]
name = "api"
version = "0.1.0"
description = "Nurse exam API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.40.0",
    "sse-starlette>=2.0.0",
    "anthropic>=0.40.0",
    "asyncpg>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
